# configparser-list

./: README.md  codecov.yml  pyproject.toml
.semaphore/: semaphore.yml
ConfigParserList/: __init__.py  configparserlist.py
examples/: example1.py  example2.py
tests/: test_config_parser_list.py
