[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configparser-list"
version = "1.0.0"
description = "Extends ConfigParser to support lists"
readme = "README.md"
authors = [{ name = "Ahmad Alobaid", email = "aalobaid@fi.upm.es" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
keywords = ["configparser", "config", "parser", "configparser-list", "configparserlist"]
dependencies = [
    'tomli; python_version > "3.0"',
]
requires-python = ">=3.0"

[project.optional-dependencies]
dev = ["codecov"]

[project.urls]
Homepage = "https://github.com/ahmad88me/configparser-list"
